--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"react-icons": "^4.11.0",
 		"react-router-dom": "^6.18.0",
 		"react-use-state": "^0.0.1",
-		"sweetalert": "^2.1.2"
+		"sweetalert2": "^11.10.7"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
