--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.38",
+		"prettier-plugin-tailwindcss": "^0.5.13",
 		"tailwindcss": "^3.4.3",
 		"vite": "^4.4.5"
 	}
